changes to index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Tech Midwest - June 3 & 4, 2017 @ Riverfest</title>
+    <title>Tech Midwest - June 3 &amp; 4, 2017 @ Riverfest</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -78,8 +78,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h1>Ready to join the biggest tech event that Wichita has ever seen?</h1>
-                    <h3>June 3 & 4, 2017 - The Boathouse @ Riverfest</h3>
+                    <h1>Tech Midwest is two days of learning, hacking, playing and connecting for people in software, hardware, gaming, startups, and innovation.</h1>
+                    <h3>June 3 &amp; 4, 2017 - The Wichita Boathouse @ Riverfest</h3>
                 </div>
             </div>
             <!-- /.row -->
@@ -93,7 +93,7 @@
         <div class="container">
             <div class="row text-center">
                 <div class="col-lg-10 col-lg-offset-1">
-                    <h2>We invite you to the inagural <strong>Tech Midwest</strong>, featuring..</h2>
+                    <h2>We invite you to the inagural <strong>Tech Midwest</strong>, featuring:</h2>
                     <br>
                     <br>
                     <div class="row">
@@ -104,10 +104,11 @@
                                 <i class="fa fa-diamond fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
-                                    <strong>Exhibition</strong>
+                                    <strong>Tech Showcase</strong>
                                 </h4>
-                                <p>A showcase of tech resources, companies, and startups. Get connected to this growing community!</p>
-                                <a href="#" class="btn btn-light">Learn More</a>
+                                <p>Showing off the best our region has to offer in the way of tech resources, companies, and startups.</p>
+                                <a href="#" class="btn btn-light">Apply to exhibit.</a>
+                                <a href="#" class="btn btn-light">Who will be there?</a>
                             </div>
                         </div>
                         <div class="col-xs-4">
@@ -119,8 +120,9 @@
                                 <h4>
                                     <strong>Hackathon</strong>
                                 </h4>
-                                <p>Spend the weekend building something awesome, compete for prizes. Fly solo or bring a team!</p>
+                                <p>Spend the weekend building something awesome. Compete for prizes. Fly solo or bring a team!</p>
                                 <a href="#" class="btn btn-light">Learn More</a>
+                                <a href="#" class="btn btn-light">Register</a>
                             </div>
                         </div>
                         <div class="col-xs-4">
@@ -130,10 +132,22 @@
                                 <i class="fa fa-comment-o fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
-                                    <strong>Speakers</strong>
+                                    <strong>Keynotes</strong>
                                 </h4>
-                                <p>Two high quality key note speakers sharing their journey in tech, and community submitted lightning talks.</p>
+                                <p>Hear the story of growth, scaling, and ___ from Person 1 and Person 2.</p>
                                 <a href="#" class="btn btn-light">Learn More</a>
+                            </div>
+                            <div class="col-xs-4">
+                                <div class="service-item">
+                                    <span class="fa-stack fa-4x">
+                                    <i class="fa fa-circle fa-stack-2x"></i>
+                                    <i class="fa fa-comment-o fa-stack-1x text-primary"></i>
+                                </span>
+                                    <h4>
+                                        <strong>Lightnng Talks</strong>
+                                    </h4>
+                                    <p>Short and powerful, these talks from community.</p>
+                                    <a href="#" class="btn btn-light">Learn More</a>
                             </div>
                         </div>
                     </div>
