--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="text-vertical-center">
             <h1 class="hidden">Tech Midwest</h1>
             <h3 class="hidden">June 3-4, 2017 @ Riverfest</h3>
-            <img src="/img/techmidwest-logo.svg" width="800" alt="" />
+            <img src="/img/techmidwest-logo.svg" width="80%" alt="" />
             <br>
             <br>
             <br>
@@ -97,7 +97,7 @@
                     <br>
                     <br>
                     <div class="row">
-                        <div class="col-xs-4">
+                        <div class="col-xs-6 col-sm-3">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
@@ -107,11 +107,11 @@
                                     <strong>Tech Showcase</strong>
                                 </h4>
                                 <p>Showing off the best our region has to offer in the way of tech resources, companies, and startups.</p>
-                                <a href="#" class="btn btn-light">Apply to exhibit.</a>
-                                <a href="#" class="btn btn-light">Who will be there?</a>
+                                <a href="#" class="btn btn-light">Apply</a>
+                                <a href="#" class="btn btn-light">See Roster</a>
                             </div>
                         </div>
-                        <div class="col-xs-4">
+                        <div class="col-xs-6 col-sm-3">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
@@ -121,11 +121,11 @@
                                     <strong>Hackathon</strong>
                                 </h4>
                                 <p>Spend the weekend building something awesome. Compete for prizes. Fly solo or bring a team!</p>
-                                <a href="#" class="btn btn-light">Learn More</a>
+                                <a href="#" class="btn btn-light">More...</a>
                                 <a href="#" class="btn btn-light">Register</a>
                             </div>
                         </div>
-                        <div class="col-xs-4">
+                        <div class="col-xs-6 col-sm-3">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
@@ -134,21 +134,24 @@
                                 <h4>
                                     <strong>Keynotes</strong>
                                 </h4>
-                                <p>Hear the story of growth, scaling, and ___ from Person 1 and Person 2.</p>
-                                <a href="#" class="btn btn-light">Learn More</a>
+                                <p>Hear the story of growth, scaling, and ___ from Person 1, title of company, and Person 2, title of company.</p>
+                                <a href="#" class="btn btn-light">Person 1</a>
+                                <a href="#" class="btn btn-light">Person 2</a>
                             </div>
-                            <div class="col-xs-4">
-                                <div class="service-item">
-                                    <span class="fa-stack fa-4x">
-                                    <i class="fa fa-circle fa-stack-2x"></i>
-                                    <i class="fa fa-comment-o fa-stack-1x text-primary"></i>
-                                </span>
-                                    <h4>
-                                        <strong>Lightnng Talks</strong>
-                                    </h4>
-                                    <p>Short and powerful, these talks from community.</p>
-                                    <a href="#" class="btn btn-light">Learn More</a>
-                            </div>
+                          </div>
+                          <div class="col-xs-6 col-sm-3">
+                              <div class="service-item">
+                                  <span class="fa-stack fa-4x">
+                                  <i class="fa fa-circle fa-stack-2x"></i>
+                                  <i class="fa fa-bolt fa-stack-1x text-primary"></i>
+                              </span>
+                                  <h4>
+                                      <strong>Lightnng Talks</strong>
+                                  </h4>
+                                  <p>Short and powerful, these talks from community. They can be about anything tech, and you should talk about your passion.</p>
+                                  <a href="#" class="btn btn-light">Speakers</a>
+                                  <a href="#" class="btn btn-light">Apply</a>
+                          </div>
                         </div>
                     </div>
                     <!-- /.row (nested) -->
