Typo by @kentonh :)

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                                   <i class="fa fa-bolt fa-stack-1x text-primary"></i>
                               </span>
                                   <h4>
-                                      <strong>Lightnng Talks</strong>
+                                      <strong>Lightning Talks</strong>
                                   </h4>
                                   <p>Short and powerful, these talks from community. They can be about anything tech, and you should talk about your passion.</p>
                                   <a href="#" class="btn btn-light">Speakers</a>
