adds coming soon modal, adds aplication and modal to Tech Showcase.

--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
                                     <strong>Tech Showcase</strong>
                                 </h4>
                                 <p>Showing off the best our region has to offer in the way of tech resources, companies, and startups.</p>
-                                <a href="#" class="btn btn-light">Apply</a>
-                                <a href="#" class="btn btn-light">See Roster</a>
+                                <a href="https://goo.gl/forms/4ASNC7cuTaZudmmJ3" class="btn btn-light">Apply</a>
+                                <button data-toggle="modal" data-target="#coming-soon" class="btn btn-light">See Roster</button>
                             </div>
                         </div>
                         <div class="col-xs-6 col-sm-3">
@@ -272,6 +272,24 @@
         </div>
         <a id="to-top" href="#top" class="btn btn-dark btn-lg"><i class="fa fa-chevron-up fa-fw fa-1x"></i></a>
     </footer>
+
+    <!-- Hackathon Info Modal -->
+    <div class="modal fade" tabindex="-1" role="dialog" id="coming-soon">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h2 class="modal-title">Hackathon @ Tech Midwest - Coming Soon</h2>
+          </div>
+          <div class="modal-body">
+            <p>
+              Check back soon for more information.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
 
     <!-- Hackathon Info Modal -->
     <div class="modal fade" tabindex="-1" role="dialog" id="hackathon-info">
