fixes links in service area

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                                 <h4>
                                     <strong>Keynotes</strong>
                                 </h4>
-                                <p>Hear the story of growth, scaling, and other topics from Mark Williams of <A href="http://workview.com">WorkView</a>, and another guest yet to be announced.</p>
+                                <p>Hear the story of growth, scaling, and other topics from Mark Williams of <a href="http://workview.com">WorkView</a>, and another guest yet to be announced.</p>
                             </div>
                           </div>
                           <div class="col-xs-6 col-sm-3">
