--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                   <h4>
                     <strong>Keynotes</strong>
                   </h4>
-                  <p>Hear the story of growth, scaling, and other topics from Mark Williams of <a href="http://workview.com">WorkView</a>, and another guest yet to be announced.</p>
+                  <p>Hear stories of growth, scaling, and tech from Mark Williams of <a href="http://workview.com">WorkView</a>, and another guest TBA.</p>
                   <button data-toggle="modal" data-target="#coming-soon" class="button btn btn-light">Saturday</button>
                   <button data-toggle="modal" data-target="#coming-soon" class="button btn btn-light">Sunday</button>
                 </div>
@@ -149,7 +149,7 @@
                     <strong>Lightning Talks</strong>
                   </h4>
                   <p>Short and powerful, these talks from community. They can be about anything tech, and you should talk about your passion.</p>
-                  <a href="#" class="btn btn-light">Speakers</a>
+                  <button data-toggle="modal" data-target="#coming-soon" class="button btn btn-light">Speakers</button>
                   <a href="#" class="btn btn-light">Apply</a>
                 </div>
               </div>
