--- a/index.html
+++ b/index.html
@@ -187,17 +187,20 @@
           <div class="col-lg-10 col-lg-offset-1 text-center">
             <h4><strong>Tech Midwest is brought to you by..</strong>
             </h4>
+            <p class="main-presented-by">
+              <a href="http://wichitariverfest.com">
+                <img src="/img/riverfest-logo.png" alt="Wichita Riverfest">
+              </a>
+            </p>
             <ul class="list-inline">
               <li>
-                <a href="http://wichitariverfest.com">
-                </a>
-              </li>
-              <li>
                 <a href="http://devict.org">
+                  <img src="/img/devict-logo.svg" alt="devICT">
                 </a>
               </li>
               <li>
                 <a href="http://startupwichita.com">
+                  <img src="/img/startupwichita-logo.svg" alt="Startup Wichita">
                 </a>
               </li>
             </ul>
