--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                   </h4>
                   <p>Short and powerful, these talks from community. They can be about anything tech, and you should talk about your passion.</p>
                   <button data-toggle="modal" data-target="#coming-soon" class="button btn btn-light">Speakers</button>
-                  <a href="#" class="btn btn-light">Apply</a>
+                  <button data-toggle="modal" data-target="#coming-soon" class="button btn btn-light">Apply</button>
                 </div>
               </div>
             </div>
