--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
               </li>
               <li>
                 <a href="http://startupwichita.com">
-                  <img src="/img/startupwichita-logo.svg" alt="Startup Wichita">
+                  <img src="/img/startupwichita-logo.png" alt="Startup Wichita">
                 </a>
               </li>
             </ul>
