Adds favicon solves #1

--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
     <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
+    <!-- mess of favicon  -->
+    <link rel="apple-touch-icon" sizes="164x164" href="/favicon.ico">
+    <link rel="icon" type="image/png" href="/favicon.ico" sizes="164x164">
+    <link rel="mask-icon" href="/favicon.ico" color="#ffffff">
+    <meta name="theme-color" content="#ffffff">
+
   </head>
 
   <body>
