adds Marks bio and headshot

--- a/index.html
+++ b/index.html
@@ -219,6 +219,27 @@
       </div>
       <a id="to-top" href="#top" class="btn btn-dark btn-lg"><i class="fa fa-chevron-up fa-fw fa-1x"></i></a>
     </footer>
+    <!-- mark-williams Modal -->
+    <div class="modal fade" tabindex="-1" role="dialog" id="mark-williams">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h2 class="modal-title">Mark Williams</h2>
+          </div>
+          <div class="modal-body">
+            <img class="headshot" src="/img/mark.png">
+            <h3>Founder and CEO of WorkView</h3>
+            <p>
+              Mark Williams brings more than 20 years of experience working with publicly and privately held software and technology companies. Mark has a strong command of technology, strategy, deal making, sales and operations, combined with an exceptionally strong financial acumen. Williams believes in a thoughtful collaborative approach to problem solving with a strong focus on execution.
+            </p>
+            <p>
+              Williams is the Founder and CEO of WorkView, a leading provider of enterprise work management solutions. Williams successfully lead this company from concept through fundraising, product development and launch. Today, WorkView is thriving and is one of the fastest growing companies in its segment.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <!-- Omar-Alaouf Modal -->
     <div class="modal fade" tabindex="-1" role="dialog" id="omar-alaouf">
