Fix mobile image sizing

--- a/index.html
+++ b/index.html
@@ -197,18 +197,18 @@
             </h4>
             <p class="main-presented-by">
               <a href="http://wichitariverfest.com">
-                <img src="/img/riverfest-logo.png" alt="Wichita Riverfest">
+                <img src="/img/riverfest-logo.png" alt="Wichita Riverfest" style="max-width: 100%;">
               </a>
             </p>
             <ul class="list-inline">
               <li>
                 <a href="http://devict.org">
-                  <img src="/img/devict-logo.svg" alt="devICT">
+                  <img src="/img/devict-logo.svg" alt="devICT" style="max-width: 100%;">
                 </a>
               </li>
               <li>
                 <a href="http://startupwichita.com">
-                  <img src="/img/startupwichita-logo.png" alt="Startup Wichita">
+                  <img src="/img/startupwichita-logo.png" alt="Startup Wichita" style="max-width: 100%;">
                 </a>
               </li>
             </ul>
