--- a/index.html
+++ b/index.html
@@ -71,7 +71,10 @@
       <div class="text-vertical-center">
         <h1 class="hidden">Tech Midwest</h1>
         <h3 class="hidden">June 3-4, 2017 @ Riverfest</h3>
-        <img src="/img/techmidwest-logo.svg" width="65%" alt="" />
+        <img src="/img/techmidwest-logo.svg" width="65%" alt="A two day, Tech focused event in Wichita, Kansas. " />
+        <img class="hidden" src="/img/TechMidwestAds_1024x768_v2.jpg" alt="" />
+        <img class="hidden" src="/img/TechMidwestAds_1024x768_vDATE.jpg" alt="" />
+        <img class="hidden" src="/img/techmidwest-logo.jpg" width="65%" alt="" />
         <br>
         <br>
         <br>
