adds opengraph image tags because probs better

--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
     <link rel="mask-icon" href="/favicon.ico" color="#ffffff">
     <meta name="theme-color" content="#ffffff">
 
+    <meta property="og:image" content="http://techmidwest.org/img/TechMidwestAds_1024x768_v2.jpg"/>
+    <meta property="og:image" content="http://techmidwest.org/img/TechMidwestAds_1024x768_vDATE.jpg"/>
+    <meta property="og:image" content="http://techmidwest.org/img/techmidwest-logo.jpg"/>
+
+
   </head>
 
   <body>
@@ -72,9 +77,9 @@
         <h1 class="hidden">Tech Midwest</h1>
         <h3 class="hidden">June 3-4, 2017 @ Riverfest</h3>
         <img src="/img/techmidwest-logo.svg" width="65%" alt="A two day, Tech focused event in Wichita, Kansas. " />
-        <img class="hidden" src="/img/TechMidwestAds_1024x768_v2.jpg" alt="" />
-        <img class="hidden" src="/img/TechMidwestAds_1024x768_vDATE.jpg" alt="" />
-        <img class="hidden" src="/img/techmidwest-logo.jpg" width="65%" alt="" />
+        <img class="social-hidden" src="/img/TechMidwestAds_1024x768_v2.jpg" alt="" />
+        <img class="social-hidden" src="/img/TechMidwestAds_1024x768_vDATE.jpg" alt="" />
+        <img class="social-hidden" src="/img/techmidwest-logo.jpg" width="65%" alt="" />
         <br>
         <br>
         <br>
