--- a/index.html
+++ b/index.html
@@ -34,9 +34,12 @@
     <link rel="mask-icon" href="/favicon.ico" color="#ffffff">
     <meta name="theme-color" content="#ffffff">
 
+    <meta property="og:title" content="Tech Midwest 2017 - A Riverfest Event." />
+    <meta property="og:description" content="Tech Midwest is two days of learning, hacking, playing and connecting for people in software, hardware, gaming, startups, and innovation." />
     <meta property="og:image" content="http://techmidwest.org/img/TechMidwestAds_1024x768_v2.jpg"/>
     <meta property="og:image" content="http://techmidwest.org/img/TechMidwestAds_1024x768_vDATE.jpg"/>
     <meta property="og:image" content="http://techmidwest.org/img/techmidwest-logo.jpg"/>
+
 
 
   </head>
@@ -76,7 +79,7 @@
       <div class="text-vertical-center">
         <h1 class="hidden">Tech Midwest</h1>
         <h3 class="hidden">June 3-4, 2017 @ Riverfest</h3>
-        <img src="/img/techmidwest-logo.svg" width="65%" alt="A two day, Tech focused event in Wichita, Kansas. " />
+        <img src="/img/techmidwest-logo.svg" width="65%" alt="A two day, Tech focused event in Wichita, Kansas." />
         <img class="social-hidden" src="/img/TechMidwestAds_1024x768_v2.jpg" alt="" />
         <img class="social-hidden" src="/img/TechMidwestAds_1024x768_vDATE.jpg" alt="" />
         <img class="social-hidden" src="/img/techmidwest-logo.jpg" width="65%" alt="" />
