adds twitter card meta info

--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
     <meta property="og:image" content="http://techmidwest.org/img/TechMidwestAds_1024x768_vDATE.jpg"/>
     <meta property="og:image" content="http://techmidwest.org/img/techmidwest-logo.jpg"/>
 
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@startupwichita" />
+    <meta name="twitter:title" content="TechMidwest 2017 @ Riverfest" />
+    <meta name="twitter:description" content="two days of learning, hacking, playing and connecting for people in software, hardware, gaming, startups, and innovation.." />
+    <meta name="twitter:image" content="http://techmidwest.org/img/TechMidwestAds_1024x768_vDATE.jpg" />
 
 
   </head>
