adds facebook info

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <link rel="mask-icon" href="/favicon.ico" color="#ffffff">
     <meta name="theme-color" content="#ffffff">
 
+    <meta property="og:site_name" content="Tech Midwest 2017" />
     <meta property="og:title" content="Tech Midwest 2017 - A Riverfest Event." />
     <meta property="og:description" content="Tech Midwest is two days of learning, hacking, playing and connecting for people in software, hardware, gaming, startups, and innovation." />
     <meta property="og:image" content="http://techmidwest.org/img/TechMidwestAds_1024x768_v2.jpg"/>
