--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       <div class="container">
         <div class="row text-center">
           <div class="col-lg-10 col-lg-offset-1">
-            <h2>We invite you to the inagural <strong>Tech Midwest</strong>, featuring:</h2>
+            <h2>Plan to attend <strong>Tech Midwest 2017</strong>, featuring:</h2>
             <br>
             <br>
             <div class="row">
@@ -132,8 +132,8 @@
                     <strong>Tech Showcase</strong>
                   </h4>
                   <p>Showing off the best our region has to offer in the way of tech resources, companies, and startups.</p>
-                  <a href="https://goo.gl/forms/4ASNC7cuTaZudmmJ3" class="btn btn-light">Apply</a>
-                  <button data-toggle="modal" data-target="#coming-soon" class="btn btn-light">See Roster</button>
+                  <!-- <a href="https://goo.gl/forms/4ASNC7cuTaZudmmJ3" class="btn btn-light">Apply</a> -->
+                  <button data-toggle="modal" data-target="#coming-soon" class="btn btn-light">See Who's Showing Off</button>
                 </div>
               </div>
               <div class="col-xs-6 col-sm-3">
@@ -191,7 +191,33 @@
     <!-- Callout -->
     <aside class="callout">
       <div class="text-vertical-center">
-        <h1>The only cost is a Riverfest Button!</h1>
+        <h1>Event Schedule</h1>
+        <p>Subject to change</p>
+        <div class="row">
+          <div class="col-md-6">
+            <h1>Saturday</h1>
+            <ul>
+              <li>Noon - Doors Open, Registraion, and Check In <br /> Showcase opens</li>
+              <li>12:30 PM - Kickoff with Keynote from <a href data-toggle="modal" data-target="#mark-williams">Mark Williams</a></li>
+              <li>1:30 PM - <a href data-toggle="modal" data-target="#hackathon-info">Hackathon</a> begins</li>
+              <li>4:30 PM - <a href data-toggle="modal" data-target="#coming-soon">Lightning Talks</a></li>
+              <li>7:00 PM - Showcase closes</li>
+            </ul>
+          </div>
+          <div class="col-md-6">
+            <h1>Sunday</h1>
+            <ul>
+              <li>9 AM - Hackathon reopens</li>
+              <li> Noon - Hackathon Evaluation</li>
+              <li>1:00 PM - Keynote from <a href data-toggle="modal" data-target="#omar-alaouf">Omar Alaouf</a></li>
+              <li>2:00 PM - Hackathon Awards<li>
+              <li>3:00 PM TechMidwest 2017 Closes</li>
+            </ul>
+          </div>
+      </div>
+
+
+        <h2>The only cost is a Riverfest Button!</h2>
         <p class="lead">With so much awesome packed into one weekend, there's no reason <em>not</em> to attend.</p>
       </div>
     </aside>
