fixes Schedule background

--- a/index.html
+++ b/index.html
@@ -191,6 +191,7 @@
     <!-- Callout -->
     <aside class="callout">
       <div class="text-vertical-center">
+        <br />
         <h1>Event Schedule</h1>
         <p>Subject to change</p>
         <div class="row">
@@ -211,7 +212,7 @@
               <li> Noon - Hackathon Evaluation</li>
               <li>1:00 PM - Keynote from <a href data-toggle="modal" data-target="#omar-alaouf">Omar Alaouf</a></li>
               <li>2:00 PM - Hackathon Awards<li>
-              <li>3:00 PM TechMidwest 2017 Closes</li>
+              <li>3:00 PM - Tech Midwest 2017 Closes</li>
             </ul>
           </div>
       </div>
