adds showcase modal and GRIT

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                   </h4>
                   <p>Showing off the best our region has to offer in the way of tech resources, companies, and startups.</p>
                   <!-- <a href="https://goo.gl/forms/4ASNC7cuTaZudmmJ3" class="btn btn-light">Apply</a> -->
-                  <button data-toggle="modal" data-target="#coming-soon" class="btn btn-light">See Who's Showing Off</button>
+                  <button data-toggle="modal" data-target="#showcase" class="btn btn-light">See Who's Showing Off</button>
                 </div>
               </div>
               <div class="col-xs-6 col-sm-3">
@@ -159,7 +159,7 @@
                   <h4>
                     <strong>Keynotes</strong>
                   </h4>
-                  <p>Hear stories of growth, scaling, and tech from Mark Williams of <a href="http://workview.com">WorkView</a>, and Omar Alaouf of <a href="http://www.octopus.watch/">Octopus by Joy</a>.</p>
+                  <p>Hear stories of growth, scaling, and tech from Mark Williams of <a  target="_blank" href="http://workview.com">WorkView</a>, and Omar Alaouf of <a  target="_blank" href="http://www.octopus.watch/">Octopus by Joy</a>.</p>
                   <button data-toggle="modal" data-target="#mark-williams" class="button btn btn-light">Saturday</button>
                   <button data-toggle="modal" data-target="#omar-alaouf" class="button btn btn-light">Sunday</button>
                 </div>
@@ -240,18 +240,18 @@
             <h4><strong>Tech Midwest is brought to you by..</strong>
             </h4>
             <p class="main-presented-by">
-              <a href="http://wichitariverfest.com">
+              <a  target="_blank" href="http://wichitariverfest.com">
                 <img src="/img/riverfest-logo.png" alt="Wichita Riverfest" style="max-width: 100%;">
               </a>
             </p>
             <ul class="list-inline">
               <li>
-                <a href="http://devict.org">
+                <a  target="_blank" href="http://devict.org">
                   <img src="/img/devict-logo.svg" alt="devICT" style="max-width: 100%;">
                 </a>
               </li>
               <li>
-                <a href="http://startupwichita.com">
+                <a  target="_blank" href="http://startupwichita.com">
                   <img src="/img/startupwichita-logo.png" alt="Startup Wichita" style="max-width: 100%;">
                 </a>
               </li>
@@ -300,11 +300,32 @@
               Omar is a Jack of all trades, master of a few. Trained as a software engineer in France, he has a strong experience designing, building, maintaining and scaling systems and infrastructure serving millions of users in both France and the US.
             </p>
             <p>
-              When he is not at work, you might find him in the workshop tinkering and hacking. Omar has a passion for taking his ideas from designs to real world objects using traditional and modern prototyping and manufacturing techniques. His current project is <a href="http://octopus.watch">JOY</a>, a company he co-founded and is the CTO of, were he is building the first Icon based watch to teach kids good habits and the concept of time.
+              When he is not at work, you might find him in the workshop tinkering and hacking. Omar has a passion for taking his ideas from designs to real world objects using traditional and modern prototyping and manufacturing techniques. His current project is <a  target="_blank" href="http://octopus.watch">JOY</a>, a company he co-founded and is the CTO of, were he is building the first Icon based watch to teach kids good habits and the concept of time.
             </p>
             <p>
-              <a href="http://twitter.com/MadeInSyria">@MadeInSyria</a> on Twitter
+              <a  target="_blank" href="http://twitter.com/MadeInSyria">@MadeInSyria</a> on Twitter
             </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- mark-williams Modal -->
+    <div class="modal fade" tabindex="-1" role="dialog" id="showcase">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h2 class="modal-title">Who To See</h2>
+          </div>
+          <div class="modal-body">
+            <img class="headshot" src="/img/logos/GRIT.gif">
+            <h3><a target="_blank" href="http://www.wearegrit.com">GRIT Virtual</a></h3>
+            <a class="btn btn-dark" target="_blank" href="http://www.facebook.com/wearegrit">Facebook</a> <a class="btn btn-dark" target="_blank" href="http://www.twitter.com/wearegrit">Twitter</a>
+            <p>
+              Building Information Modeling is reaching a maturation stage nationwide, but still needs a champion to implement in our region. With the introduction of VR headsets and software, we are able to spread the virtual environments with more and more people, unveiling more and more applications at each stage.
+            </p>
+            <h3>More to come...</h3>
           </div>
         </div>
       </div>
