updates Showcase to Storehouse

--- a/index.html
+++ b/index.html
@@ -325,9 +325,10 @@
             <p>
               Building Information Modeling is reaching a maturation stage nationwide, but still needs a champion to implement in our region. With the introduction of VR headsets and software, we are able to spread the virtual environments with more and more people, unveiling more and more applications at each stage.
             </p>
+            <hr>
             <img class="headshot" src="/img/logos/Storehouse-Logo-Color-Neg.png">
             <h3><a target="_blank" href="https://sthse.co">The Storehouse</a></h3>
-            <a class="btn btn-dark" target="_blank" href="http://www.facebook.com/StorehouseHosting">Facebook</a> <a class="btn btn-dark" target="_blank" href="http://www.twitter.com/storehousevcs">Twitter</a> <a target="_blank" href="https://plus.google.com/u/0/b/104193149704716189008/104193149704716189008/posts">Google +</a>
+            <a class="btn btn-dark" target="_blank" href="http://www.facebook.com/StorehouseHosting">Facebook</a> <a class="btn btn-dark" target="_blank" href="http://www.twitter.com/storehousevcs">Twitter</a> <a class="btn btn-dark" target="_blank" href="https://plus.google.com/u/0/b/104193149704716189008/104193149704716189008/posts">Google +</a>
             <p>
               Project Storage for Big Ideas.  Pay as you go cloud file storage for any file and any industry proudly built and based in our hometown of Wichita.  Unlimited space, free user accounts, and customizable features make us perfect for any individual or business.
             </p>
