adds Callcap information to Showcase

--- a/index.html
+++ b/index.html
@@ -332,6 +332,13 @@
             <p>
               Project Storage for Big Ideas.  Pay as you go cloud file storage for any file and any industry proudly built and based in our hometown of Wichita.  Unlimited space, free user accounts, and customizable features make us perfect for any individual or business.
             </p>
+            <hr>
+            <img class="headshot" src="/img/logos/Callcap.png">
+            <h3><a target="_blank" href="http://www.callcap.com/">Callcap</a></h3>
+            <a class="btn btn-dark" target="_blank" href="https://www.linkedin.com/company/callcap">LinkedIn</a> <a class="btn btn-dark" target="_blank" href="http://www.facebook.com/callcap">Facebook</a> <a class="btn btn-dark" target="_blank" href="http://www.twitter.com/Callcap">Twitter</a>
+            <p>
+              Callcap is a nationwide call tracking and monitoring solution for companies looking to improve ROI, marketing effectiveness and staff performance. Our suite of products help our clients decrease their costs, train their employees, communicate effectively with existing clientele and measure new marketing ventures immediately with the use of call tracking phone numbers, recorded call evaluation services and other useful tools.
+            </p>
             <h3>More to come...</h3>
           </div>
         </div>
