Adds Vis Optics to Showcase and adds sponsors section

--- a/index.html
+++ b/index.html
@@ -188,6 +188,23 @@
       <!-- /.container -->
     </section>
 
+    <!-- Sponsors -->
+    <aside class="call-to-action bg-sponsor">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h3>Tech Midwest 2017 is sponsored by:</h3>
+                    <a href="http://www.kochind.com/" target="_blank" ><img src="/img/logos/KOCH.jpg"></a>
+                    <a href="http://sntmedia.com/" target="_blank" ><img src="/img/logos/SNT.jpg"></a>
+                    <a href="https://www.butlercc.edu/" target="_blank" ><img src="/img/logos/Butler.jpg"></a>
+                    <a href="http://flinthillsgroup.com/" target="_blank" ><img src="/img/logos/FHG.jpg"></a>
+                    <a href="http://www.downtownwichita.org/" target="_blank" ><img src="/img/logos/DowntownWichita.jpg"></a>
+
+                </div>
+            </div>
+        </div>
+    </aside>
+
     <!-- Callout -->
     <aside class="callout">
       <div class="text-vertical-center">
@@ -338,6 +355,13 @@
             <a class="btn btn-dark" target="_blank" href="https://www.linkedin.com/company/callcap">LinkedIn</a> <a class="btn btn-dark" target="_blank" href="http://www.facebook.com/callcap">Facebook</a> <a class="btn btn-dark" target="_blank" href="http://www.twitter.com/Callcap">Twitter</a>
             <p>
               Callcap is a nationwide call tracking and monitoring solution for companies looking to improve ROI, marketing effectiveness and staff performance. Our suite of products help our clients decrease their costs, train their employees, communicate effectively with existing clientele and measure new marketing ventures immediately with the use of call tracking phone numbers, recorded call evaluation services and other useful tools.
+            </p>
+            <hr>
+            <img class="headshot" src="/img/logos/VisOptics.jpg">
+            <h3><a target="_blank" href="https://www.visibilityoptics.com">Visibility Optics</a></h3>
+            <a class="btn btn-dark" target="_blank" href="https://www.linkedin.com/company/visibility-optics-llc">LinkedIn</a> <a class="btn btn-dark" target="_blank" href="http://www.facebook.com/visibilityoptics">Facebook</a> <a class="btn btn-dark" target="_blank" href="http://www.twitter.com/visibilityoptic">Twitter</a>
+            <p>
+              Visibility Optics creates a truly unique eyewear buying and patient education experience through the use of computer vision and patient specific eye care data.
             </p>
             <h3>More to come...</h3>
           </div>
